vlib/v/checker/tests/unnecesary_cast.out
vlib/v/checker/tests/unnecesary_cast.vv:3:13: error: unnecessary cast
    1 | fn main() {
    2 |     a := 1
    3 |     println(int(a))
      |             ~~~~~~
    4 | }
Details: `a` is already of type `int`
