vlib/v/checker/tests/unnecesary_cast.vv
fn main() {
    a := 1
    println(int(a))
}
